--- a/igcse/1-2.md
+++ b/igcse/1-2.md
@@ -15,3 +15,5 @@ Directions:
 - Full-duplex
   - Both directions at the same time
   - Example: broadband connection on a phone line
+
+Try not to confuse *Mode* and *Type*
